<resources>
    <string name="app_name">Walrus Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Settings</string>
    <string name="settings_back">Go Back</string>
    <string name="settings_personal_info">Personal Info</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_name_hint">Name</string>
    <string name="settings_email_hint">Email</string>
    <string name="settings_phone_hint">Phone Number</string>
    <string name="settings_edit_name">Edit Name</string>
    <string name="settings_edit_email">Edit Email</string>
    <string name="settings_edit_phone">Edit Phone Number</string>
    <string name="settings_notifications_opt_out">Opt out of receiving notifications</string>
    <string name="settings_delete_profile">Delete Profile</string>
    <string name="settings_loading_error">Unable to load your profile.</string>
    <string name="settings_save_changes">Save Changes</string>
    <string name="settings_save_success">Profile Updated.</string>
    <string name="settings_save_error">Unable to save profile.</string>
    <string name="settings_notifications_error">Unable to update notification preference.</string>
    <string name="settings_name_required">Name is required.</string>
    <string name="settings_email_required">Email is required.</string>
    <string name="settings_email_invalid">Enter a valid email address.</string>
    <string name="settings_delete_confirm_title">Delete profile?</string>
    <string name="settings_delete_confirm_message">This permanently removes your personal information from the app.</string>
    <string name="settings_delete_confirm_action">Delete</string>
    <string name="settings_delete_cancel_action">Cancel</string>
    <string name="settings_delete_success">Profile deleted.</string>
    <string name="settings_delete_error">Unable to delete profile.</string>
    <string name="permissions_load_error">Unable to verify account permissions.</string>
    <string name="permissions_banned_message">This account has been banned.</string>
    <string name="permissions_denied_message">This account does not have the required permissions.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
